--- a/requirements.txt
+++ b/requirements.txt
@@ -8,23 +8,20 @@ Pillow>=9.0.0
 
 # 网络请求
 requests>=2.26.0
-aiohttp>=3.8.0
-beautifulsoup4>=4.9.3
 urllib3>=1.26.0
 
-# 数据处理
-pandas>=1.3.0
-numpy>=1.21.0
+# 日志
+colorlog>=6.7.0
 
-# 文件和IO处理
-python-io>=0.3
-pathlib>=1.0.1
+# 打包工具
+pyinstaller>=6.0.0
+pywin32>=306
+winshell>=0.6
 
-# 工具包
-tqdm>=4.62.0
-python-dotenv>=0.19.0
-keyboard>=0.13.5
-
-# 日志和调试
-colorlog>=6.4.0
-logging>=0.5.1.2
+# 语音爬虫所需（selenium 爬取与解析）
+selenium>=4.20.0
+webdriver-manager>=4.0.0
+beautifulsoup4>=4.12.0
+fake-useragent>=1.5.0
+lxml>=4.9.0
+pydub>=0.25.1
